--- a/views/events-show.handlebars
+++ b/views/events-show.handlebars
@@ -8,5 +8,8 @@
     />
     <h3>{{event.title}}</h3>
     <div class='lead'>{{event.desc}}</div>
+    <div class='text-right'>
+      <a href='/events/{{event.id}}/edit'>Edit</a>
+    </div>
   </div>
 </div>
