--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,25 +1,30 @@
 <!-- views/layouts/main.handlebars -->
 
 <html>
-  <head>
-    <meta charset='utf-8' />
-    <title>Make Parties</title>
-    <link
-      rel='stylesheet'
-      href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css'
-      integrity='sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN'
-      crossorigin='anonymous'
-    />
-  </head>
-  <body>
-    {{> navbar}}
-    <div class="container">
-      {{{body}}}
+
+<head>
+  <meta charset='utf-8' />
+  <title>Make Parties</title>
+  <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css'
+    integrity='sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN' crossorigin='anonymous' />
+      <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css">
+
+</head>
+
+<body>
+  {{> navbar}}
+  <div class="container">
+    {{{body}}}
+  </div>
+  <!-- Footer -->
+  <footer class="page-footer font-small blue pt-4">
+    <div class="footer-copyright text-center py-3">© 2024 Copyright:
+      <p>made with love</p>
     </div>
-    <script
-      src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js'
-      integrity='sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+'
-      crossorigin='anonymous'
-    ></script>
-  </body>
+  </footer>
+  <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js'
+    integrity='sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+'
+    crossorigin='anonymous'></script>
+</body>
+
 </html>
