--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,15 +1,36 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Make Parties</a>
+<nav class='navbar navbar-expand-lg navbar-light bg-light'>
+  <a class='navbar-brand' href='#'>Make Parties</a>
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+  <button
+    class='navbar-toggler'
+    type='button'
+    data-toggle='collapse'
+    data-target='#navbarSupportedContent'
+    aria-controls='navbarSupportedContent'
+    aria-expanded='false'
+    aria-label='Toggle navigation'
+  >
+    <span class='navbar-toggler-icon'></span>
   </button>
 
-  <div class="collapse navbar-collapse">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Home</a>
+  <div class='collapse navbar-collapse'>
+    <ul class='navbar-nav mr-auto'>
+      <li class='nav-item active'>
+        <a class='nav-link' href='/'>Home</a>
       </li>
+      {{#if currentUser}}
+        <li>
+          <a class='nav-link' href='/logout'>Logout</a>
+        </li>
+      {{else}}
+        <li>
+          <a class='nav-link' href='/sign-up'>Sign Up</a>
+        </li>
+        <li>
+          <a class='nav-link' href='/login'>Login</a>
+        </li>
+      {{/if}}
+
     </ul>
   </div>
 </nav>
