--- a/views/partials/sign-up-form.handlebars
+++ b/views/partials/sign-up-form.handlebars
@@ -1,18 +1,18 @@
 <!-- views/partials/sign-up-form.handlebars -->
 
 <div class='form-group'>
-  <label for='firstname'>First Name</label>
+  <label for='firstName'>First Name</label>
   <input
-    name='firstname'
+    name='firstName'
     class='form-control'
     placeholder='First Name'
     value='{{user.firstName}}'
   />
 </div>
 <div class='form-group'>
-  <label for='lastname'>Last Name</label>
+  <label for='lastName'>Last Name</label>
   <input
-    name='lastname'
+    name='lastName'
     class='form-control'
     placeholder='Last Name'
     value='{{user.lastName}}'
