--- a/views/events-index.handlebars
+++ b/views/events-index.handlebars
@@ -2,7 +2,9 @@
 <div class='row mt-4'>
   <div class='col-lg-6 offset-lg-3'>
     <h1>Reviews</h1>
-    <a href='/events/new'>New Event</a>
+    {{#if currentUser}}
+      <a href='/events/new'>New Event</a>
+    {{/if}}
     <h1>Events</h1>
     {{#each events}}
       <div class='card mt-3'>
@@ -15,10 +17,12 @@
           <h5 class='card-title'>{{this.title}}</h5>
           <p class='card-text'>{{this.desc}}</p>
           <div class='text-right'>
-            <a
-              href='/events/{{this.id}}/rsvps/new'
-              class='btn btn-info'
-            >Rsvp</a>
+            {{#if ../currentUser}}
+              <a
+                href='/events/{{this.id}}/rsvps/new'
+                class='btn btn-info'
+              >Rsvp</a>
+            {{/if}}
             <a
               href='/events/{{this.id}}'
               class='btn btn-primary'
