--- a/views/events-show.handlebars
+++ b/views/events-show.handlebars
@@ -5,18 +5,24 @@
         <small class="text-muted">Created on: {{event.createdAtFormatted}}</small>
         <h3>{{event.title}}</h3>
         <div class="lead">{{event.desc}}</div>
-        <div class="text-right">
+
+        {{#ifEquals event.UserId currentUser.id }}
+          <div class="text-right">
             <a href="/events/{{event.id}}/edit">Edit</a>
-        </div>
+          </div>
+        {{/ifEquals}}
+        
     </div>
 
   <div class='col-lg-4 offset-lg-1'>
     <div class='d-flex justify-content-between'>
       <b>RSVPs ({{event.Rsvps.length}})</b>
-      <a
-        href='/events/{{event.id}}/rsvps/new'
-        class='btn btn-primary btn-sm'
-      >RSVP</a>
+      {{#if currentUser}}
+        <a
+          href='/events/{{event.id}}/rsvps/new'
+          class='btn btn-primary btn-sm'
+        >RSVP</a>
+      {{/if}}
     </div>
 
     <div class="list-group mt-4">
@@ -25,11 +31,13 @@
           <div class="float-left">
             {{this.name}}
           </div>
+
           <div class="float-right">
             <form class="form-inline" action="/events/{{../event.id}}/rsvps/{{this.id}}?_method=DELETE" method="post">
               <button type="submit" class="btn btn-link btn-sm">Remove</button>
             </form>
           </div>
+      
         </div>
       {{/each}}
     </div>
